# jira-to-sqlite

./: AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
